# ImpactOS

./: .dockerignore  .env.example  .env.staging.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.staging.yml  docker-compose.yml  openapi.json  pyproject.toml  windsurfrules
.claude/: settings.local.json
alembic/: env.py
data/: README.md
docs/: ImpactOS_Comprehensive_Project_Document_v3.md  ImpactOS_Data_Sources_APIs_BuildPack_v1.0.md  ImpactOS_Master_Build_Plan_v2.md  ImpactOS_Technical_Specification_v1_0.md  LOCAL_RUNBOOK.md  SG_Golden_Run_Benchmark_Plan.md  SG_Methodology_vs_ImpactOS_Gap_Analysis.md  d3_data_source_inventory.md  d4_workforce_data_inventory.md  d5_data_materialization.md  mvp10_feasibility_layer.md  mvp11_workforce_satellite.md  mvp12_knowledge_flywheel.md  mvp13_data_quality_automation.md  mvp14_phase2_integration_gate.md  phase2_gate_report.md
frontend/: .env.example  .env.staging.example  Dockerfile  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
scripts/: __main__.py  build_division_data.py  build_nitaqat_data.py  build_synthetic_model.py  extract_sg_division_weights.py  fetch_all.py  fetch_ilostat.py  fetch_kapsarc.py  fetch_sama.py  fetch_wdi.py  generate_phase2_gate_report.py  generate_synthetic_fixtures.py  materialize_curated_data.py  seed.py  staging_deploy.py  staging_full_e2e.py  staging_preflight.py  staging_smoke.py  test_all_apis.py  test_ilostat_api.py  test_kapsarc_api.py  test_opendata_api.py  test_sama_api.py  test_wdi_api.py  validate_model.py
tests/: conftest.py  test_api.py  test_models.py  test_models_data_quality.py  test_models_feasibility.py  test_models_libraries.py  test_models_workforce.py  test_repo_feasibility.py  test_repo_workforce.py  (+2 more)
(+754 files in other folders)
